@@ -4308,10 +4308,14 @@ name|IOException
 block|{
 comment|// Do not hold file lock on committedTxnId, because the containing
 comment|// directory will be renamed.  It will be reopened lazily on next access.
-name|committedTxnId
+name|IOUtils
 operator|.
-name|close
-argument_list|()
+name|cleanup
+argument_list|(
+name|LOG
+argument_list|,
+name|committedTxnId
+argument_list|)
 expr_stmt|;
 name|storage
 operator|.
@@ -4467,6 +4471,25 @@ argument_list|,
 literal|0
 argument_list|)
 decl_stmt|;
+name|BestEffortLongFile
+name|prevCommittedTxnId
+init|=
+operator|new
+name|BestEffortLongFile
+argument_list|(
+operator|new
+name|File
+argument_list|(
+name|previousDir
+argument_list|,
+name|COMMITTED_TXID_FILENAME
+argument_list|)
+argument_list|,
+name|HdfsConstants
+operator|.
+name|INVALID_TXID
+argument_list|)
+decl_stmt|;
 name|lastPromisedEpoch
 operator|=
 operator|new
@@ -4499,6 +4522,26 @@ argument_list|,
 literal|0
 argument_list|)
 expr_stmt|;
+name|committedTxnId
+operator|=
+operator|new
+name|BestEffortLongFile
+argument_list|(
+operator|new
+name|File
+argument_list|(
+name|currentDir
+argument_list|,
+name|COMMITTED_TXID_FILENAME
+argument_list|)
+argument_list|,
+name|HdfsConstants
+operator|.
+name|INVALID_TXID
+argument_list|)
+expr_stmt|;
+try|try
+block|{
 name|lastPromisedEpoch
 operator|.
 name|set
@@ -4519,6 +4562,29 @@ name|get
 argument_list|()
 argument_list|)
 expr_stmt|;
+name|committedTxnId
+operator|.
+name|set
+argument_list|(
+name|prevCommittedTxnId
+operator|.
+name|get
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+finally|finally
+block|{
+name|IOUtils
+operator|.
+name|cleanup
+argument_list|(
+name|LOG
+argument_list|,
+name|prevCommittedTxnId
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 DECL|method|doFinalize ()
 specifier|public
@@ -4623,10 +4689,14 @@ name|IOException
 block|{
 comment|// Do not hold file lock on committedTxnId, because the containing
 comment|// directory will be renamed.  It will be reopened lazily on next access.
-name|committedTxnId
+name|IOUtils
 operator|.
-name|close
-argument_list|()
+name|cleanup
+argument_list|(
+name|LOG
+argument_list|,
+name|committedTxnId
+argument_list|)
 expr_stmt|;
 name|storage
 operator|.
