@@ -92,6 +92,20 @@ end_import
 
 begin_import
 import|import
+name|com
+operator|.
+name|google
+operator|.
+name|common
+operator|.
+name|annotations
+operator|.
+name|VisibleForTesting
+import|;
+end_import
+
+begin_import
+import|import
 name|org
 operator|.
 name|apache
@@ -621,7 +635,10 @@ return|return
 name|journal
 return|;
 block|}
+annotation|@
+name|VisibleForTesting
 DECL|method|getOrCreateJournal (String jid)
+specifier|public
 name|Journal
 name|getOrCreateJournal
 parameter_list|(
