@@ -270,6 +270,22 @@ name|hadoop
 operator|.
 name|hdfs
 operator|.
+name|protocol
+operator|.
+name|HdfsConstants
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hdfs
+operator|.
 name|qjournal
 operator|.
 name|MiniQJMHACluster
@@ -309,6 +325,24 @@ operator|.
 name|server
 operator|.
 name|Journal
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hdfs
+operator|.
+name|qjournal
+operator|.
+name|server
+operator|.
+name|JournalNode
 import|;
 end_import
 
@@ -396,6 +430,22 @@ name|hdfs
 operator|.
 name|util
 operator|.
+name|BestEffortLongFile
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hdfs
+operator|.
+name|util
+operator|.
 name|PersistentLongFile
 import|;
 end_import
@@ -445,6 +495,22 @@ operator|.
 name|base
 operator|.
 name|Joiner
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|mockito
+operator|.
+name|internal
+operator|.
+name|util
+operator|.
+name|reflection
+operator|.
+name|Whitebox
 import|;
 end_import
 
@@ -1681,6 +1747,67 @@ expr_stmt|;
 block|}
 block|}
 block|}
+DECL|method|getCommittedTxnIdValue (MiniQJMHACluster qjCluster)
+specifier|private
+name|long
+name|getCommittedTxnIdValue
+parameter_list|(
+name|MiniQJMHACluster
+name|qjCluster
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+name|Journal
+name|journal1
+init|=
+name|qjCluster
+operator|.
+name|getJournalCluster
+argument_list|()
+operator|.
+name|getJournalNode
+argument_list|(
+literal|0
+argument_list|)
+operator|.
+name|getOrCreateJournal
+argument_list|(
+name|MiniQJMHACluster
+operator|.
+name|NAMESERVICE
+argument_list|)
+decl_stmt|;
+name|BestEffortLongFile
+name|committedTxnId
+init|=
+operator|(
+name|BestEffortLongFile
+operator|)
+name|Whitebox
+operator|.
+name|getInternalState
+argument_list|(
+name|journal1
+argument_list|,
+literal|"committedTxnId"
+argument_list|)
+decl_stmt|;
+return|return
+name|committedTxnId
+operator|!=
+literal|null
+condition|?
+name|committedTxnId
+operator|.
+name|get
+argument_list|()
+else|:
+name|HdfsConstants
+operator|.
+name|INVALID_TXID
+return|;
+block|}
 comment|/**    * Make sure that an HA NN can successfully upgrade when configured using    * JournalNodes.    */
 annotation|@
 name|Test
@@ -1795,6 +1922,16 @@ argument_list|)
 argument_list|)
 argument_list|)
 expr_stmt|;
+comment|// get the value of the committedTxnId in journal nodes
+specifier|final
+name|long
+name|cidBeforeUpgrade
+init|=
+name|getCommittedTxnIdValue
+argument_list|(
+name|qjCluster
+argument_list|)
+decl_stmt|;
 comment|// Do the upgrade. Shut down NN1 and then restart NN0 with the upgrade
 comment|// flag.
 name|cluster
@@ -1851,6 +1988,16 @@ argument_list|(
 name|qjCluster
 argument_list|,
 literal|true
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|cidBeforeUpgrade
+operator|<=
+name|getCommittedTxnIdValue
+argument_list|(
+name|qjCluster
+argument_list|)
 argument_list|)
 expr_stmt|;
 comment|// NN0 should come up in the active state when given the -upgrade option,
@@ -1914,6 +2061,16 @@ argument_list|(
 literal|"/foo3"
 argument_list|)
 argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|getCommittedTxnIdValue
+argument_list|(
+name|qjCluster
+argument_list|)
+operator|>
+name|cidBeforeUpgrade
 argument_list|)
 expr_stmt|;
 comment|// Now bootstrap the standby with the upgraded info.
@@ -2131,6 +2288,15 @@ argument_list|)
 argument_list|)
 argument_list|)
 expr_stmt|;
+specifier|final
+name|long
+name|cidBeforeUpgrade
+init|=
+name|getCommittedTxnIdValue
+argument_list|(
+name|qjCluster
+argument_list|)
+decl_stmt|;
 comment|// Do the upgrade. Shut down NN1 and then restart NN0 with the upgrade
 comment|// flag.
 name|cluster
@@ -2162,6 +2328,16 @@ argument_list|(
 literal|0
 argument_list|,
 literal|false
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|cidBeforeUpgrade
+operator|<=
+name|getCommittedTxnIdValue
+argument_list|(
+name|qjCluster
+argument_list|)
 argument_list|)
 expr_stmt|;
 name|assertTrue
@@ -2240,9 +2416,35 @@ argument_list|(
 literal|1
 argument_list|)
 expr_stmt|;
+specifier|final
+name|long
+name|cidDuringUpgrade
+init|=
+name|getCommittedTxnIdValue
+argument_list|(
+name|qjCluster
+argument_list|)
+decl_stmt|;
+name|assertTrue
+argument_list|(
+name|cidDuringUpgrade
+operator|>
+name|cidBeforeUpgrade
+argument_list|)
+expr_stmt|;
 name|runFinalizeCommand
 argument_list|(
 name|cluster
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|cidDuringUpgrade
+argument_list|,
+name|getCommittedTxnIdValue
+argument_list|(
+name|qjCluster
+argument_list|)
 argument_list|)
 expr_stmt|;
 name|checkClusterPreviousDirExistence
@@ -3178,6 +3380,15 @@ argument_list|)
 argument_list|)
 argument_list|)
 expr_stmt|;
+specifier|final
+name|long
+name|cidBeforeUpgrade
+init|=
+name|getCommittedTxnIdValue
+argument_list|(
+name|qjCluster
+argument_list|)
+decl_stmt|;
 comment|// Do the upgrade. Shut down NN1 and then restart NN0 with the upgrade
 comment|// flag.
 name|cluster
@@ -3250,6 +3461,22 @@ argument_list|(
 literal|"/foo2"
 argument_list|)
 argument_list|)
+argument_list|)
+expr_stmt|;
+specifier|final
+name|long
+name|cidDuringUpgrade
+init|=
+name|getCommittedTxnIdValue
+argument_list|(
+name|qjCluster
+argument_list|)
+decl_stmt|;
+name|assertTrue
+argument_list|(
+name|cidDuringUpgrade
+operator|>
+name|cidBeforeUpgrade
 argument_list|)
 expr_stmt|;
 comment|// Now bootstrap the standby with the upgraded info.
@@ -3366,6 +3593,30 @@ argument_list|(
 name|conf
 argument_list|,
 literal|false
+argument_list|)
+expr_stmt|;
+specifier|final
+name|long
+name|cidAfterRollback
+init|=
+name|getCommittedTxnIdValue
+argument_list|(
+name|qjCluster
+argument_list|)
+decl_stmt|;
+name|assertTrue
+argument_list|(
+name|cidBeforeUpgrade
+operator|<
+name|cidAfterRollback
+argument_list|)
+expr_stmt|;
+comment|// make sure the committedTxnId has been reset correctly after rollback
+name|assertTrue
+argument_list|(
+name|cidDuringUpgrade
+operator|>
+name|cidAfterRollback
 argument_list|)
 expr_stmt|;
 comment|// The rollback operation should have rolled back the first NN's local
